--- a/blogs.html
+++ b/blogs.html
@@ -175,7 +175,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="single-blog wow fadeInUp">
+                                <div class="single-blog wow fadeInRight">
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="blog-image"><img src="./images/blogs/dashboard-sm.jpg" alt="Dashboard"></div>
@@ -191,7 +191,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="single-blog wow fadeInUp">
+                                <div class="single-blog wow fadeInRight">
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="blog-image"><img src="./images/blogs/dashboard-sm.jpg" alt="Dashboard"></div>
@@ -207,7 +207,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="single-blog wow fadeInUp">
+                                <div class="single-blog wow fadeInRight">
                                     <div class="row">
                                         <div class="col-4">
                                             <div class="blog-image"><img src="./images/blogs/dashboard-sm.jpg" alt="Dashboard"></div>
