--- a/blogs.html
+++ b/blogs.html
@@ -102,9 +102,9 @@
 
         <!-- Blogs -->
 
-        <div class="ams-blogs">
+        <div class="ams-blogs sec-spacer">
             <div class="container">
-                <div class="blogs-heading sec-spacer">
+                <div class="blogs-heading">
                     <h2 class="text-center">Our  Blog </h2>
                     <div class="blog-cat-links">
                         <a href="#" class="active">All</a>
@@ -120,7 +120,7 @@
                 <div class="ams-latest-blogs">
                     <div class="sec-heading d-flex justify-content-between align-items-center mb-40">
                         <h3>Our Latest Blog Posts</h3>
-                        <div class="ams-btn primary-btn">See All Blog Posts</div>
+                        <a href="#" class="ams-btn primary-btn">See All Blog Posts</a>
                     </div>
                     <div class="row">
                         <div class="col-8">
@@ -229,7 +229,7 @@
                 </div>
 
                 <!-- Editor's Blog -->
-                <div class="ams-editor-blogs sec-spacer">
+                <div class="ams-editor-blogs sec-spacer-top">
                     <div class="sec-heading mb-40">
                         <h3>Editor’s Pick</h3>
                     </div>
@@ -331,6 +331,17 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- Pagination -->
+                <div class="ams-pagination text-center sec-spacer-top">
+                    <a href="#"><i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">...</a>
+                    <a href="#">9</a>
+                    <a href="#">10</a>
+                    <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
                 </div>
             </div>
         </div>
