--- a/blogs.html
+++ b/blogs.html
@@ -105,7 +105,7 @@
         <div class="ams-blogs sec-spacer">
             <div class="container">
                 <div class="blogs-heading">
-                    <h2 class="text-center">Our  Blog </h2>
+                    <h2 class="text-center mb-5">Our  Blog </h2>
                     <div class="blog-cat-links">
                         <a href="#" class="active">All</a>
                         <a href="#">Business</a>
