--- a/blogs.html
+++ b/blogs.html
@@ -104,8 +104,8 @@
 
         <div class="ams-blogs sec-spacer">
             <div class="container">
-                <div class="blogs-heading">
-                    <h2 class="text-center mb-5">Our  Blog </h2>
+                <div class="blogs-heading mb-5">
+                    <h2 class="text-center">Our  Blog </h2>
                     <div class="blog-cat-links">
                         <a href="#" class="active">All</a>
                         <a href="#">Business</a>
