--- a/resturant.html
+++ b/resturant.html
@@ -133,6 +133,78 @@
             </div>
         </div>
 
+        <!-- Pos Features -->
+        <div class="ams-pos-features">
+            <div class="container">
+                <div class="sec-heading text-center mb-50">
+                    <h2 class="wow fadeInUp">Our Restrurent POS Sofrware</span></h2>
+                    <p class="wow zoomIn">Don’t waste time on search manual tasks. Let Automation do it for you. Simplify workflows, reduce errors, and save time.</p>
+                </div>
+                <div class="row align-items-center sec-spacer-bottom">
+                    <div class="col-6">
+                        <img src="./images/banner/dashboard.png" alt="POS Dashboard">
+                    </div>
+                    <div class="col-6">
+                        <h3>Why you should get our RMS software?</h3>
+                        <p class="my-4">A restaurant management system (RMS) software is a combination of tools and software that assign you to control your food business. Starting a restaurant looks so simple,</p>
+                        <ul class="feature-list">
+                            <li>Simplified Order Process</li>
+                            <li>Use Just One Platform</li>
+                            <li>Investment Report Every Month</li>
+                            <li>Multiple Payment Method</li>
+                            <li>Online Transection</li>
+                            <li>Investment Report Every Month</li>
+                            <li>Complete Solution</li>
+                            <li>Use Just One Platform</li>
+                            <li>Investment Report Every Month</li>
+                        </ul>
+                        <a href="#" class="ams-btn primary-btn mt-4">See Demo</a>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-6">
+                        <h3>Why you should get our RMS software?</h3>
+                        <p class="my-4">A restaurant management system (RMS) software is a combination of tools and software that assign you to control your food business. Starting a restaurant looks so simple,</p>
+                        <ul class="feature-list">
+                            <li>Simplified Order Process</li>
+                            <li>Use Just One Platform</li>
+                            <li>Investment Report Every Month</li>
+                            <li>Multiple Payment Method</li>
+                            <li>Online Transection</li>
+                            <li>Investment Report Every Month</li>
+                            <li>Complete Solution</li>
+                            <li>Use Just One Platform</li>
+                            <li>Investment Report Every Month</li>
+                        </ul>
+                        <a href="#" class="ams-btn primary-btn mt-4">Buy Now</a>
+                    </div>
+                    <div class="col-6">
+                        <img src="./images/banner/restaurant-pos.png" alt="POS restaurant">
+                    </div>
+                </div>
+                <div class="row align-items-center sec-spacer-bottom">
+                    <div class="col-6">
+                        <img src="./images/banner/sales-pos.png" alt="POS">
+                    </div>
+                    <div class="offset-1 col-5">
+                        <h3>Why you should get our RMS software?</h3>
+                        <ul class="feature-list-2 mt-4">
+                            <li>Simplified Order Process</li>
+                            <li>Use Just One Platform</li>
+                            <li>Investment Report Every Month</li>
+                            <li>Multiple Payment Method</li>
+                            <li>Online Transection</li>
+                            <li>Investment Report Every Month</li>
+                            <li>Complete Solution</li>
+                            <li>Use Just One Platform</li>
+                            <li>Investment Report Every Month</li>
+                        </ul>
+                        <a href="#" class="ams-btn primary-btn mt-4">See Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Features -->
         <div class="ams-features">
             <img src="./images/shapes/curve.png" alt="Curve">
