--- a/resturant.html
+++ b/resturant.html
@@ -84,16 +84,16 @@
         <div class="ams-banner">
             <div class="container">
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
-                    <div class="col-lg-6 col-xxl-5">
+                    <div class="col-lg-6">
                         <div class="banner-content mt-40 mt-lg-0">
-                            <h1 class="wow fadeInUp">We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
+                            <h1 class="wow fadeInUp">The restaurant and retail <span class="color-text">point of sale</span> at our service.</h1>
                             <p class="my-4 my-xxl-5 wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                             <a href="#" class="ams-btn primary-btn wow fadeInUp">Buy Now</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xxl-7">
+                    <div class="col-lg-6">
                         <div class="banner-image">
-                            <img src="./images/banner/banner.png" alt="Hosting">
+                            <img src="./images/banner/restaurant-banner.jpg" alt="Restaurant Pos">
                         </div>
                     </div>
                 </div>
