--- a/resturant.html
+++ b/resturant.html
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="banner-image">
+                        <div class="banner-imagee">
                             <img src="./images/banner/restaurant-banner.jpg" alt="Restaurant Pos">
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                         <a href="#" class="ams-btn primary-btn mt-4">See Demo</a>
                     </div>
                 </div>
-                <div class="row align-items-center">
+                <div class="row align-items-center sec-spacer-bottom">
                     <div class="col-6">
                         <h3>Why you should get our RMS software?</h3>
                         <p class="my-4">A restaurant management system (RMS) software is a combination of tools and software that assign you to control your food business. Starting a restaurant looks so simple,</p>
