--- a/blog-details.html
+++ b/blog-details.html
@@ -266,36 +266,36 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <div class="similar-blogs">
-                        <h4>Similer Post</h4>
+                    <div class="similar-blogs my-5">
+                        <h4 class="mb-4">Similer Post</h4>
                         <div class="row g-4">
                             <div class="col-4">
                                 <div class="single-blog">
                                     <div class="blog-image">
-                                        <img src="" alt="">
+                                        <img src="./images/blogs/pos-preview.jpg" alt="Pos">
                                     </div>
                                     <div class="blog-content">
-                                        <a href="#"><h6>Village did removed enjoyed saw to .....</h6></a>
+                                        <a href="#"><h6 class="mt-3">Village did removed enjoyed saw to .....</h6></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="single-blog">
                                     <div class="blog-image">
-                                        <img src="" alt="">
+                                        <img src="./images/blogs/pos-preview.jpg" alt="Pos">
                                     </div>
                                     <div class="blog-content">
-                                        <a href="#"><h6>Village did removed enjoyed saw to .....</h6></a>
+                                        <a href="#"><h6 class="mt-3">Village did removed enjoyed saw to .....</h6></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="single-blog">
                                     <div class="blog-image">
-                                        <img src="" alt="">
+                                        <img src="./images/blogs/pos-device.jpg" alt="Pos Device">
                                     </div>
                                     <div class="blog-content">
-                                        <a href="#"><h6>Village did removed enjoyed saw to .....</h6></a>
+                                        <a href="#"><h6 class="mt-3">Village did removed enjoyed saw to .....</h6></a>
                                     </div>
                                 </div>
                             </div>
