--- a/blog-details.html
+++ b/blog-details.html
@@ -78,12 +78,12 @@
         </div>
     </div>
 
-    <main class="ams-main-section">
+    <main class="ams-main-section sec-spacer">
 
         <!-- Blog Details -->
-        <div class="container sec-spacer">
+        <div class="container">
             <div class="row">
-                <div class="col-8">
+                <div class="col-lg-8">
                     <div class="ams-blog-details">
                         <h2 class="wow fadeInUp">How POS Increase the Productivityof Your Store.</h2>
                         <div class="blog-meta-data my-4 wow fadeInUp">
@@ -101,7 +101,7 @@
                         <p class="py-4 blog-des wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus massa maecenas at dis elit viverra faucibus. Urna non eu egestas integer consectetur lectus bibendum. Id proin donec enim libero est, aliquam fringilla venenatis. Tempus volutpat nisi, eget egestas tempor, sit. Sed ligula malesuada odio tellus id ipsum. Ultricies rhoncus, viverra turpis vel enim sed netus. Mi posuere in eu, magna morbi nibh eu neque. Est iaculis neque, quis vitae. Vitae, turpis eget metus imperdiet mattis nunc magna sagittis. Magna est diam risus feugiat interdum. Id dolor semper amet ut diam tortor. Dolor tellus egestas turpis libero mattis eget sed lacinia.</p>
                         <p class="blog-des wow fadeInUp">Adipiscing tristique ornare proin arcu varius. Congue faucibus tellus cursus turpis donec lorem vitae, aliquet sed. Ut velit cursus amet ipsum eget. Bibendum risus, orci, ac vel at. Tincidunt vestibulum montes, blandit aliquam. Eu viverra purus convallis tristique velit egestas ac orci. Suspendisse fermentum enim ut elementum cras donec tristique aliquet ac.</p>
                         <p class="py-4 blog-des wow fadeInUp">Mauris, vestibulum at euismod diam facilisis adipiscing gravida. At commodo sed ut ac sit lobortis donec proin. Rhoncus luctus consequat adipiscing morbi ornare. Sed fames commodo tristique viverra quam luctus ullamcorper sociis urna. Semper fusce ipsum in leo ut ut mattis vestibulum, auctor. Egestas hac sit sagittis faucibus enim. Dui commodo, sit et varius aenean porttitor vel. Feugiat commodo vitae volutpat, diam tortor. Lacus vitae arcu euismod id nec natoque sagittis. Turpis vel viverra at turpis rutrum. Varius volutpat massa neque integer nulla. Nisl, nibh habitant suspendisse nulla non porttitor lacinia. Sit mi est sem eget dui. Erat integer nascetur condimentum pellentesque lectus faucibus tellus phasellus enim.</p>
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between social-share-wpr">
                             <div class="social-share wow fadeInLeft">
                                 <span>Share this:</span>
                                 <span><a href="#"><i class="fa-brands fa-facebook"></i></a></span>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="sidebar-blogs">
                         <div class="single-blog wow fadeInUp">
                             <div class="row">
@@ -269,7 +269,7 @@
                     <div class="similar-blogs my-5">
                         <h4 class="mb-4">Similer Post</h4>
                         <div class="row g-4">
-                            <div class="col-4">
+                            <div class="col-md-4 col-sm-6">
                                 <div class="single-blog">
                                     <div class="blog-image">
                                         <img src="./images/blogs/pos-preview.jpg" alt="Pos">
@@ -279,7 +279,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-4 col-sm-6">
                                 <div class="single-blog">
                                     <div class="blog-image">
                                         <img src="./images/blogs/pos-preview.jpg" alt="Pos">
@@ -289,7 +289,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-4 col-sm-6">
                                 <div class="single-blog">
                                     <div class="blog-image">
                                         <img src="./images/blogs/pos-device.jpg" alt="Pos Device">
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-7">
+                <div class="col-xl-7 col-lg-8">
                     <div class="blog-comments">
                         <h4>Comments</h4>
                         <form action="" class="comment-form mb-50 wow fadeInUp">
@@ -313,11 +313,11 @@
                         </form>
                         <div class="single-comment wow fadeInUp">
                             <div class="row">
-                                <div class="col-1">
+                                <div class="col-sm-2 col-md-1">
                                     <img src="./images/clients/rana.jpg" alt="Rana">
                                     <p>Rana</p>
                                 </div>
-                                <div class="col-11">
+                                <div class="col-sm-10 col-md-11">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nibh, interdum non enim sit amet, iaculis aliquet nunc.</p>
                                     <div class="comment-meta-data d-flex">
                                         <span>Reply</span>
@@ -328,11 +328,11 @@
                         </div>
                         <div class="single-comment wow fadeInUp">
                             <div class="row">
-                                <div class="col-1">
+                                <div class="col-sm-2 col-md-1">
                                     <img src="./images/clients/rana.jpg" alt="Rana">
                                     <p>Rana</p>
                                 </div>
-                                <div class="col-11">
+                                <div class="col-sm-10 col-md-11">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nibh, interdum non enim sit amet, iaculis aliquet nunc.</p>
                                     <div class="comment-meta-data d-flex">
                                         <span>Reply</span>
@@ -343,11 +343,11 @@
                         </div>
                         <div class="single-comment wow fadeInUp">
                             <div class="row">
-                                <div class="col-1">
+                                <div class="col-sm-2 col-md-1">
                                     <img src="./images/clients/rana.jpg" alt="Rana">
                                     <p>Rana</p>
                                 </div>
-                                <div class="col-11">
+                                <div class="col-sm-10 col-md-11">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nibh, interdum non enim sit amet, iaculis aliquet nunc.</p>
                                     <div class="comment-meta-data d-flex">
                                         <span>Reply</span>
