--- a/blogs.html
+++ b/blogs.html
@@ -123,7 +123,7 @@
                         <a href="#" class="ams-btn primary-btn">See All Blog Posts</a>
                     </div>
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-xl-8">
                             <div class="row">
                                 <div class="col-6">
                                     <div class="single-blog wow fadeInUp">
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-xl-4">
                             <div class="sidebar-blogs">
                                 <div class="single-blog wow fadeInUp">
                                     <div class="row">
@@ -234,7 +234,7 @@
                         <h3>Editor’s Pick</h3>
                     </div>
                     <div class="row g-4">
-                        <div class="col-4">
+                        <div class="col-sm-6 col-xl-4">
                             <div class="single-blog wow fadeInUp">
                                 <div class="blog-image">
                                     <img src="./images/blogs/pos.jpg" alt="Pos">
@@ -250,7 +250,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-6 col-xl-4">
                             <div class="single-blog wow fadeInUp">
                                 <div class="blog-image">
                                     <img src="./images/blogs/dashboard.jpg" alt="Dashboard">
@@ -266,7 +266,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-6 col-xl-4">
                             <div class="single-blog wow fadeInUp">
                                 <div class="blog-image">
                                     <img src="./images/blogs/dashboard.jpg" alt="Dashboard">
@@ -282,7 +282,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-6 col-xl-4">
                             <div class="single-blog wow fadeInUp">
                                 <div class="blog-image">
                                     <img src="./images/blogs/pos.jpg" alt="Pos">
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-6 col-xl-4">
                             <div class="single-blog wow fadeInUp">
                                 <div class="blog-image">
                                     <img src="./images/blogs/dashboard.jpg" alt="Dashboard">
@@ -314,7 +314,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-6 col-xl-4">
                             <div class="single-blog wow fadeInUp">
                                 <div class="blog-image">
                                     <img src="./images/blogs/dashboard.jpg" alt="Dashboard">
