--- a/blogs.html
+++ b/blogs.html
@@ -125,7 +125,7 @@
                     <div class="row">
                         <div class="col-xl-8">
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-sm-6">
                                     <div class="single-blog wow fadeInUp">
                                         <div class="blog-image">
                                             <img src="./images/blogs/pos.jpg" alt="Pos">
@@ -140,7 +140,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-sm-6">
                                     <div class="single-blog wow fadeInUp">
                                         <div class="blog-image">
                                             <img src="./images/blogs/dashboard.jpg" alt="Dashboard">
