--- a/blogs.html
+++ b/blogs.html
@@ -135,7 +135,7 @@
                                                 <p>08-11-2021</p>
                                                 <p>Category</p>
                                             </div>
-                                            <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store.</h6></a>
+                                            <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store.</h6></a>
                                             <p>Blessing welcomed ladyship she met humoured sir breeding her. Six curiosity day assurance bed necessary.</p>
                                         </div>
                                     </div>
@@ -150,7 +150,7 @@
                                                 <p>08-11-2021</p>
                                                 <p>Category</p>
                                             </div>
-                                            <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
+                                            <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
                                             <p>Yet preference connection unpleasant yet melancholy but end appearance. And excellence partiality estimating terminated day everything.</p>
                                         </div>
                                     </div>
@@ -170,7 +170,7 @@
                                                     <p>08-11-2021</p>
                                                     <p>Category</p>
                                                 </div>
-                                                <a href="#" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
+                                                <a href="./blog-details.html" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
                                             </div>
                                         </div>
                                     </div>
@@ -186,7 +186,7 @@
                                                     <p>08-11-2021</p>
                                                     <p>Category</p>
                                                 </div>
-                                                <a href="#" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
+                                                <a href="./blog-details.html" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
                                             </div>
                                         </div>
                                     </div>
@@ -202,7 +202,7 @@
                                                     <p>08-11-2021</p>
                                                     <p>Category</p>
                                                 </div>
-                                                <a href="#" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
+                                                <a href="./blog-details.html" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
                                             </div>
                                         </div>
                                     </div>
@@ -218,7 +218,7 @@
                                                     <p>08-11-2021</p>
                                                     <p>Category</p>
                                                 </div>
-                                                <a href="#" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
+                                                <a href="./blog-details.html" class="blog-title mt-1"><h6>How to Fix the Common Issues of Any POS System</h6></a>
                                             </div>
                                         </div>
                                     </div>
@@ -244,9 +244,9 @@
                                         <p><i class="fa-solid fa-clock"></i> 3 July 2021</p>
                                         <p><i class="fa-solid fa-comment"></i> 10 Comment</p>
                                     </div>
-                                    <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store.</h6></a>
+                                    <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store.</h6></a>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or.</p>
-                                    <a href="#" class="ams-btn primary-btn">Read More</a>
+                                    <a href="./blog-details.html" class="ams-btn primary-btn">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -260,9 +260,9 @@
                                         <p><i class="fa-solid fa-clock"></i> 3 July 2021</p>
                                         <p><i class="fa-solid fa-comment"></i> 10 Comment</p>
                                     </div>
-                                    <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
+                                    <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or.</p>
-                                    <a href="#" class="ams-btn primary-btn">Read More</a>
+                                    <a href="./blog-details.html" class="ams-btn primary-btn">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -276,9 +276,9 @@
                                         <p><i class="fa-solid fa-clock"></i> 3 July 2021</p>
                                         <p><i class="fa-solid fa-comment"></i> 10 Comment</p>
                                     </div>
-                                    <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
+                                    <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or.</p>
-                                    <a href="#" class="ams-btn primary-btn">Read More</a>
+                                    <a href="./blog-details.html" class="ams-btn primary-btn">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -292,9 +292,9 @@
                                         <p><i class="fa-solid fa-clock"></i> 3 July 2021</p>
                                         <p><i class="fa-solid fa-comment"></i> 10 Comment</p>
                                     </div>
-                                    <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store.</h6></a>
+                                    <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store.</h6></a>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or.</p>
-                                    <a href="#" class="ams-btn primary-btn">Read More</a>
+                                    <a href="./blog-details.html" class="ams-btn primary-btn">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -308,9 +308,9 @@
                                         <p><i class="fa-solid fa-clock"></i> 3 July 2021</p>
                                         <p><i class="fa-solid fa-comment"></i> 10 Comment</p>
                                     </div>
-                                    <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
+                                    <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or.</p>
-                                    <a href="#" class="ams-btn primary-btn">Read More</a>
+                                    <a href="./blog-details.html" class="ams-btn primary-btn">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -324,9 +324,9 @@
                                         <p><i class="fa-solid fa-clock"></i> 3 July 2021</p>
                                         <p><i class="fa-solid fa-comment"></i> 10 Comment</p>
                                     </div>
-                                    <a href="#" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
+                                    <a href="./blog-details.html" class="blog-title"><h6>How an POS Increase the Productivity of Your Store..</h6></a>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or.</p>
-                                    <a href="#" class="ams-btn primary-btn">Read More</a>
+                                    <a href="./blog-details.html" class="ams-btn primary-btn">Read More</a>
                                 </div>
                             </div>
                         </div>
