--- a/blog-details.html
+++ b/blog-details.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col-3 col-lg-2">
                         <div class="nav-action">
-                            <a href="#" class="ams-btn primary-btn">Login</a>
+                            <a href="./login.html" class="ams-btn primary-btn">Login</a>
                         </div>
                     </div>
                 </div>
