--- a/fashion.html
+++ b/fashion.html
@@ -90,6 +90,9 @@
                             <h1 class="wow fadeInUp text-white">The Fashion and retail <span class="color-text">POS</span> at our service.</h1>
                             <p class="my-4 my-xxl-5 wow fadeInUp text-white">Amar Solution is the best restaurant management system with a website, an application. You need a business.</p>
                             <a href="#" class="ams-btn primary-btn wow fadeInUp">Buy Now</a>
+                            <a class="ams-btn wow fadeInUp ms-3" href="https://www.youtube.com/watch?v=SjpYighGRPc&ab_channel=AmarSolution" target="_blank">
+                                <i class="fa-solid fa-play"></i> Watch Demo
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-7">
