--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <div class="ams-login-wpr">
                 <div class="ams-login">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="login-content text-center">
                                 <img src="./images/shapes/abstract.png" alt="abstract" class="login-abstract">
                                  <img src="./images/shapes/login-dashboard.png" alt="Dashboard">
@@ -44,7 +44,7 @@
                                 <p class="text-white">Sing up to explor your business growth </p>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="contact-form">
                                 <a href="#" class="logo"><img src="./images/logo/logo.png" alt="Logo"></a>
                                 <h3 class="my-3">Login</h3>
