--- a/resturant.html
+++ b/resturant.html
@@ -140,11 +140,11 @@
                     <h2 class="wow fadeInUp">Our Restrurent POS Sofrware</span></h2>
                     <p class="wow zoomIn">Don’t waste time on search manual tasks. Let Automation do it for you. Simplify workflows, reduce errors, and save time.</p>
                 </div>
-                <div class="row align-items-center sec-spacer-bottom">
-                    <div class="col-6">
+                <div class="row align-items-center sec-spacer-bottom g-4">
+                    <div class="col-md-6">
                         <img src="./images/banner/dashboard.png" alt="POS Dashboard">
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <h3>Why you should get our RMS software?</h3>
                         <p class="my-4">A restaurant management system (RMS) software is a combination of tools and software that assign you to control your food business. Starting a restaurant looks so simple,</p>
                         <ul class="feature-list">
@@ -161,8 +161,8 @@
                         <a href="#" class="ams-btn primary-btn mt-4">See Demo</a>
                     </div>
                 </div>
-                <div class="row align-items-center sec-spacer-bottom">
-                    <div class="col-6">
+                <div class="row align-items-center sec-spacer-bottom g-4">
+                    <div class="col-md-6">
                         <h3>Why you should get our RMS software?</h3>
                         <p class="my-4">A restaurant management system (RMS) software is a combination of tools and software that assign you to control your food business. Starting a restaurant looks so simple,</p>
                         <ul class="feature-list">
@@ -178,15 +178,15 @@
                         </ul>
                         <a href="#" class="ams-btn primary-btn mt-4">Buy Now</a>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="./images/banner/restaurant-pos.png" alt="POS restaurant">
                     </div>
                 </div>
-                <div class="row align-items-center sec-spacer-bottom">
-                    <div class="col-6">
+                <div class="row align-items-center sec-spacer-bottom g-4">
+                    <div class="col-md-6">
                         <img src="./images/banner/sales-pos.png" alt="POS">
                     </div>
-                    <div class="offset-1 col-5">
+                    <div class="offset-md-1 col-md-5">
                         <h3>Why you should get our RMS software?</h3>
                         <ul class="feature-list-2 mt-4">
                             <li>Simplified Order Process</li>
@@ -254,8 +254,8 @@
                     <h6 class="color-text">Why Amaar Solution</h6>
                     <h2 class="wow fadeInUp">Why Choose Us</h2>
                 </div>
-                <div class="row g-4 services-wpr px-5">
-                    <div class="col-sm-6">
+                <div class="row g-4 services-wpr px-xl-5">
+                    <div class="col-lg-6">
                         <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/fee.svg" alt="No Fees">
@@ -266,7 +266,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-lg-6">
                         <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/fee.svg" alt="No Fees">
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-lg-6">
                         <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/fee.svg" alt="No Fees">
@@ -288,7 +288,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-lg-6">
                         <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/fee.svg" alt="No Fees">
