--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AkaarIT">
-    <meta name="description" content="Amar solution is the best POS software in Bangladesh that makes your business easy and simple. With this software you can easily manage your inventory....">
+    <meta name="description" content="Amar Solution is one of the leading software companies. The only reliable software for conducting all types of business which is spread to thousands of traders across the country.">
 	<meta name="keywords" content="Bangladesh, Domain, Hosting, Domain and Hosting, Cheapest Hosting, Cheapest Domain, Cheap Domain, Cheap Hosting, Domain Hosting, Domain hosting Bangladesh, Cheap Domain Bnagladesh, Cheap Hosting Bangladesh, Domain & Hosting, Domain & Hosting in Bangladesh, SSD Space, SSD Storage, High Speed hosting, High speed hosting in Bagladesh.">
     
     <!-- Fav Icon -->
@@ -86,8 +86,8 @@
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
                     <div class="col-lg-6 col-xxl-5">
                         <div class="banner-content mt-40 mt-lg-0">
-                            <h1 class="wow fadeInUp">Best <span class="color-text">POS</span> Software in Bangladesh</h1>
-                            <p class="my-4 my-xxl-5 wow fadeInUp">When it comes to choosing the best POS software for your business, there are a few things you need to consider. One of the most important factors is what type of business you have. If you have a restaurant, for example, you'll want to make sure that the software is designed specifically for restaurants.</p>
+                            <h1 class="wow fadeInUp">We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
+                            <p class="my-4 my-xxl-5 wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                             <a href="#" class="ams-btn primary-btn wow fadeInUp">Buy Now</a>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
         <!-- Partners -->
         <div class="ams-partners pt-80">
             <div class="container">
-                <h2 class="text-center mb-40">Companies we have helped to grow</h2>
+                <h3 class="text-center mb-40">Companies we have helped to grow</h3>
                 <div class="partner-slider owl-carousel wow fadeInUp">
                     <div class="item">
                         <a href="#"><img src="./images/logo/zeplin.png" alt="Zeplin"></a>
@@ -138,7 +138,7 @@
             <div class="container">
                 <div class="sec-heading text-center mb-5">
                     <h2 class="wow fadeInUp">Our <span class="color-text">POS</span> Software</h2>
-                    <p class="wow zoomIn">In general, a POS system helps you improve your operations for your customers. This includes reducing waiting time, faster scanning of items, quicker payments, etc.</p>
+                    <p class="wow zoomIn">Don’t waste time on search manual tasks. Let Automation do it for you. Simplify workflows, reduce errors, and save time.</p>
                 </div>
                 <div class="row g-4 services-wpr">
                     <div class="col-lg-3 col-sm-6">
@@ -148,7 +148,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Super Shop</h6>
-                                <p>POS software can help supershops manage their inventory more effectively. POS makes it easy to run a Supershop.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -159,7 +160,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Fashion Shop</h6>
-                                <p>Our POS system can help your fashion business to track sales and inventory, manage employee hours, and more.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -170,7 +172,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Resturent Business</h6>
-                                <p>Are you looking for ways to improve your restaurant business? If so, you may want to consider using our restaurant point of sale (POS) system.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -180,8 +183,9 @@
                                 <img src="./images/shapes/icons/device.svg" alt="Device Shop">
                             </div>
                             <div class="service-content">
-                                <h6>Electronics Shop</h6>
-                                <p>With our POS software,Electronics shop owners can have the information they need to make their business thrive.</p>
+                                <h6>Elctronics Shop</h6>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -192,7 +196,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Hardware</h6>
-                                <p>a POS system can provide valuable insights into your hardware business, such as which products are selling well and which are not.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -203,7 +208,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Whole sell </h6>
-                                <p>Our POS software can help Whole sell shop in many ways. For one, it can streamline the checkout process by keeping track of inventory and prices.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -214,7 +220,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Medical Store</h6>
-                                <p>Any medical store, whether a small mom-and-pop operation or a large chain pharmacy, needs to have a POS (point of sale) system.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -225,7 +232,8 @@
                             </div>
                             <div class="service-content">
                                 <h6>Tailor Shop</h6>
-                                <p>A point of sale (POS) system is a valuable tool for any retail business, and a tailor shop is no exception.</p>
+                                <p>Visualize where people are posting using your
+                                    hashtag made.</p>
                             </div>
                         </div>
                     </div>
@@ -242,8 +250,8 @@
                 <div class="sec-heading">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h2 class="wow fadeInUp"> We Are The Largest POS Software Provider With Solutions</h2>
-                            <p class="wow fadeInUp">As the largest provider of POS software solutions, we offer a wide range of products that are designed to meet the needs of businesses of all sizes. From small businesses to enterprise-level organizations, we have a solution that will fit your needs.</p>
+                            <h2 class="wow fadeInUp">We have the best team and best process</h2>
+                            <p class="wow fadeInUp">Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy.</p>
                             <a href="#" class="ams-btn primary-btn wow fadeInUp">See Demo</a>
                         </div>
                     </div>
@@ -253,20 +261,20 @@
                     <div class="single-process wow fadeInLeft">
                         <h1 class="process-nmbr">1</h1>
                         <div class="icon"><span></span></div>
-                        <h6 class="mb-2">Strength</h6>
-                        <p>Our POS software helps businesses to streamline their operations by keeping track of sales and inventory. </p>
+                        <h6 class="mb-2">Project Discovery Call</h6>
+                        <p>Party we years to order allow asked of. We so opinion friends me message as delight. </p>
                     </div>
                     <div class="single-process wow fadeInUp">
                         <h1 class="process-nmbr">2</h1>
                         <div class="icon"><span></span></div>
-                        <h6 class="mb-2">Mission</h6>
-                        <p>Our POS software’s mission is to streamline and organize a storefront business’s sales process by automating key tasks, such as product and customer management.</p>
+                        <h6 class="mb-2">Project Discovery Call</h6>
+                        <p>His defective nor convinced residence own. Connection has put impossible own apartments boisterous.</p>
                     </div>
                     <div class="single-process wow fadeInRight">
                         <h1 class="process-nmbr">3</h1>
                         <div class="icon"><span></span></div>
-                        <h6 class="mb-2">Vision</h6>
-                        <p>Our POS software’s vision is to change the way people interact with technology when shopping.</p>
+                        <h6 class="mb-2">Project Discovery Call</h6>
+                        <p>From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly.</p>
                     </div>
                 </div>
             </div>
@@ -288,25 +296,25 @@
                         <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/cloud.svg" alt="Sales">
                             <h5 class="mt-4">Sales</h5>
-                            <p>Sales management is critical for any business that sells products or services. POS software can help sales managers keep track of inventory, customer information, and sales data.</p>
+                            <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
                         <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/stock.svg" alt="Stock">
                             <h5 class="mt-4">Stock</h5>
-                            <p>A POS software system is a critical part of any retail business, and proper stock management is essential to keeping the system running smoothly. </p>
+                            <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
                         <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/account.svg" alt="Account">
                             <h5 class="mt-4">Account</h5>
-                            <p>When it comes to account management, the best POS software will offer a variety of features to help you stay organized and efficient.</p>
+                            <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
                         <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/report.svg" alt="Report">
                             <h5 class="mt-4">Report</h5>
-                            <p>Our POS system ensure that the software is running smoothly and all reports are up to date.</p>
+                            <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
                     </div>
@@ -487,7 +495,7 @@
                     <div class="col-lg-6">
                         <div class="contact-content pe-xxl-5">
                             <h2 class="wow fadeInUp">Get in <span class="color-text">Touch</span> With Us to Meet Your Business Goal.</h2>
-                            <p class="pe-xl-5 wow fadeInUp">Get in touch with us for any kind of help. We are here to give you the best POS software that will help your business to grow.</p>
+                            <p class="pe-xl-5 wow fadeInUp">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 mt-40 mt-lg-0">
