--- a/blogs.html
+++ b/blogs.html
@@ -86,8 +86,8 @@
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
                     <div class="col-lg-6 col-xxl-5">
                         <div class="banner-content mt-40 mt-lg-0">
-                            <h1 class="wow fadeInUp">Best <span class="color-text">POS</span> Software in Bangladesh</h1>
-                            <p class="my-4 my-xxl-5 wow fadeInUp">When it comes to choosing the best POS software for your business, there are a few things you need to consider. One of the most important factors is what type of business you have. If you have a restaurant, for example, you'll want to make sure that the software is designed specifically for restaurants</p>
+                            <h1 class="wow fadeInUp">We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
+                            <p class="my-4 my-xxl-5 wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                             <a href="#" class="ams-btn primary-btn wow fadeInUp">Buy Now</a>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
                         <div class="contact-content pe-xxl-5">
                             <h2 class="mb-0 wow fadeInUp">For Coustom Work</h2>
                             <h6 class="color-text my-4">Not Satisfied with Our Product??? no woorries!!</h6>
-                            <p class="pe-xl-5 wow fadeInUp">Get in touch with us for any kind of help. We are here to give you the best POS software that will help your business to grow.</p>
+                            <p class="pe-xl-5 wow fadeInUp">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
                             <div class="contact-links">
                                 <h5 class="color-text">Contact Us</h5>
                                 <p class="mt-2">Feel Free To Contact With Us Queries Of To <a href="#" class="color-text">Extended Licence</a> Or <a href="#" class="color-text">Coustom Project</a> .</p>
