--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <div class="ams-login-wpr">
                 <div class="ams-login">
                     <div class="row align-items-center">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 d-none d-lg-block">
                             <div class="login-content text-center">
                                 <img src="./images/shapes/abstract.png" alt="abstract" class="login-abstract">
                                  <img src="./images/shapes/login-dashboard.png" alt="Dashboard">
